<resources>
    <string name="app_name">Maratona</string>
    <string name="nome_adapter">Nome</string>
    <string name="pontuacao_adapter">9999</string>
    <string name="matricula_adapter">999999999en dash9</string>
    <string name="matricula_hint">Matrícula</string>
    <string name="senha_hint">Senha</string>
    <string name="btn_logar">Logar</string>
    <string name="btn_startSenha">Cadastrar</string>
    <string name="tab1">Minha Pontuação</string>
    <string name="tab2">Classificação</string>
    <string name="tab3">Foto</string>
    <string name="logo_description">Logomarca do diretório acadêmico de computação</string>
    <string name="da_description">Frase: diretório acadêmico de computação</string>
    <string name="title_activity_main">MenuAlunoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="item_sair">Sair</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_menu_admin">MenuAdminActivity</string>
    <string name="informacoes_usuario">recuperadas do banco</string>
    <string name="posicao">99</string>
    <string name="btn_add_pontuacao">Add Pontuação</string>
    <string name="btn_adicionar_faltas">Add Faltas</string>
    <string name="btn_del_pontuacao">Rem Pontuação</string>
    <string name="btn_remover_faltas">Rem Faltas</string>
    <string name="separacao_tela">------------------------------------------------------------------------------</string>
    <string name="btn_adicionar_periodo">Add Período</string>
    <string name="para_todos">Para Todos</string>
    <string name="quantidade">Quantidade</string>
    <string name="btn_selecionar_imagem">Galeria</string>
    <string name="btn_upload_imagem">Upload</string>
    <string name="btn_tirar_foto">Câmera</string>
    <string name="nome_da_debugs">DeBugs</string>
    <string name="nome_desenvolvedor">Tiago Emerenciano\nRamon Ranieri</string>
    <string name="title_activity_menu">MENU</string>
</resources>